Add card in website simple responsive

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+   <div class="father-container">
     <div class="main">
 
         <div class="nav">
@@ -60,15 +61,154 @@
     </div>
 
 
-    <div class="man-cards">
+    <div class="main-cards">
         <div class="cards">
             <div class="card">
                 <div class="heading">
-                    
+                    <h3>Hello World</h3>
                 </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
             </div>
         </div>
+        <div class="cards">
+            <div class="card">
+                <div class="heading">
+                    <h3 class="card-head">Hello World</h3>
+                </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="heading">
+                    <h3>Hello World</h3>
+                </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="heading">
+                    <h3>Hello World</h3>
+                </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="heading">
+                    <h3>Hello World</h3>
+                </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="heading">
+                    <h3>Hello World</h3>
+                </div>
+                <div class="imageg">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.YAXlTjvtEKchdMVc5laZhwHaE8%26pid%3DApi&f=1&ipt=544cbc2ff362886ec0e6ad9cf2daeb20549ef0b13fc94b79cd88ffcb75a9af28&ipo=images"
+                        alt="" class="card-img">
+                </div>
+                <div class="stars">
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="cards-para">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sit eveniet
+                        nemo delectus perferendis, provident possimus fugiat necessitatibus odio quod aperiam unde error
+                        optio explicabo excepturi quo minima omnis. Dignissimos?</p>
+                </div>
+
+            </div>
+        </div>
+
     </div>
+   </div>
 
 
     <script src="https://kit.fontawesome.com/5562aae272.js" crossorigin="anonymous"></script>
